--- a/src/main/webapp/table.html
+++ b/src/main/webapp/table.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/FormOfficer.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -18,8 +19,12 @@
 </head>
 
 <body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
 
 <header>
     <img class="logo" src="https://i.ibb.co/ckDdYBB/Ciudadados-de-4-Patas.png" alt="logo">
@@ -32,7 +37,9 @@
             <li><a href="visitsOfficial.html">Table Visit</a></li>
         </ul>
     </nav>
-    <a class= "cta" href="contact.html"><button>Contact</button></a>
+    <a class="cta" href="contact.html">
+        <button>Contact</button>
+    </a>
     <nav>
         <ul class="nav_links">
             <li><a href="index.html" id="bton-signin">Log out</a></li>
@@ -46,7 +53,7 @@
     <table class="table">
         <thead>
         <tr>
-           <th>Specie</th>
+            <th>Specie</th>
             <th>Race</th>
             <th>Size</th>
             <th>Sex</th>
@@ -55,29 +62,10 @@
         </tr>
         </thead>
         <tbody id="res">
-        <tr>
-            <td>ggg</td>
-            <td>hdhdhhd</td>
-
-
-        </tr>
         </tbody>
     </table>
 </div>
-<script>
-
-    document.getElementById("visit").onchange = function() {
-        if (this.value == 'micro') {
-            var optionID=document.getElementById('microchip');
-            alert(optionID.value);
-            document.getElementById("size").disabled = false;
-        }else
-            document.getElementById("size").disabled = true;
-    }
-</script>
-
-<script src="js/formTable.js"></script>
-
+<script src="Js/printTable.js" type="text/javascript"></script>
 </body>
 
 </html>
